--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
             const component = document.getElementById('component').value;
 
             const res = await fetch('https://sonarqube-viewer-production.up.railway.app/fetch', {
-                method: 'GET',
+                method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ url, component })
             });
