--- a/public/index.html
+++ b/public/index.html
@@ -112,11 +112,7 @@
                 while (true) {
                     const fullUrl = `${baseUrl}api/issues/search?components=${component}&p=${currentPage}&ps=${pageSize}&s=SEVERITY`;
 
-                    const response = await fetch(fullUrl, {
-                        headers: {
-                            'Content-Type': 'application/json'
-                        }
-                    });
+                    const response = await fetch(fullUrl);
                     const data = await response.json();
 
                     if (currentPage === 1) {
